<resources>
    <string name="app_name">any one else </string>

    <!-- Strings related to login -->
    <string name="hint_phonenumber">phonenumber</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--登录模块-->
    <string name="title_staff_login">员工登录</string>
    <string name="title_boss_login">老板登录</string>
    <string name="btn_login">登录</string>
    <string name="btn_generatecode">获取验证码</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_choose_ent">选择店铺</string>
    <string name="title_boss_auth">老板授权</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>

    <!--其他-->
    <string name="load_more">加载更多...</string>

    <string name="open_drawer">打开侧滑栏</string>
    <string name="close_drawer">关闭侧滑栏</string>
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="title_scan_qr">二维码扫描</string>
</resources>
